fix align issue on accordion section.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -408,7 +408,11 @@ ul.list-blue {
 		transform: translateY(-50%) rotate(180deg);
 	}
 }
-
+#ulAccordion span {
+	display: inline-block;
+	padding-left: 10px;
+	text-indent: -10px;
+}
 .video-wrap {
   padding: 80px 0;
   background-color: #000;
